# data-oop

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  ecosystem.config.cjs  plan.md  pyproject.toml  start_studio.sh
docs/: CLI.md  USAGE.md  problem_definition_guide.md
scripts/: load_commerce_tbox.py  run_validation.py
server/: api.py
src/data_oop/: __init__.py  cli.py  connectors.py  dsl.py  exceptions.py  falkor.py  falkor_abox.py  falkor_repository.py  falkor_validation.py  memory.py  models.py  repository.py  resolve.py  sync.py  triggers.py  validator.py  workflows.py
src/data_oop/falkor/: _repo_base.py  _repo_classes.py  _repo_connectors.py  _repo_constraints.py  _repo_interfaces.py  _repo_properties.py  _repo_relationships.py  _repo_triggers.py  _repo_views.py  abox.py  graph.py  query.py  repository.py  validation.py
src/data_oop/rdb/: cache.py  connectors.py  operations.py  sync.py  views.py
src/data_oop/schema/: declarative.py  dsl.py  effective.py  export.py  models.py  repository.py  validator.py
src/data_oop/workflow/: triggers.py  workflows.py
src/tbox/: __init__.py  exceptions.py  falkor.py  falkor_abox.py  falkor_repository.py  falkor_validation.py  memory.py  models.py  repository.py  validator.py
src/tbox/presets/: __init__.py  commerce.py
tests/: test_cli.py  test_commerce_preset.py  test_connector.py  test_constraint_enforcement.py  test_declarative.py  test_dsl.py  test_export.py  test_falkor_abox.py  test_falkor_loader.py  test_falkor_repository.py  test_falkor_validation.py  test_repository.py  test_resolve.py  test_subclass.py  test_sync.py  test_triggers.py  test_validator.py  test_workflows.py  test_write_validation.py
ui/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.test.tsx  App.tsx  api.ts  index.css  types.ts
ui/src/components/: NodeSelectorModal.tsx  TBoxSchemaTab.tsx  ValidationTab.tsx  WorkflowTab.tsx
ui/src/components/tbox/: AttachPropertyModal.tsx  CreateClassModal.tsx  CreatePropertyModal.tsx  CreateTriggerModal.tsx  DefineRelationshipModal.tsx  SchemaOverview.tsx
ui/src/components/workflow/: CodePreview.tsx  ParamManager.tsx  RunPanel.tsx  StepConfigurator.tsx  WorkflowCanvas.tsx  WorkflowList.tsx  layout.tsx
ui/src/hooks/: useTBox.ts  useValidation.ts  useWorkflow.ts
