[project]
name = "data-oop"
version = "0.1.0"
description = "Dynamic TBox ontology definition and validation library"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
  "falkordb>=1.0.10",
  "redis>=7.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_oop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
