[project]
name = "data-oop"
version = "0.1.2"
description = "Dynamic TBox ontology definition and validation library"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
  "falkordb>=1.0.10",
  "fastapi>=0.136.3",
  "redis>=7.4.0",
  "uvicorn>=0.48.0",
]

[project.scripts]
data-oop = "data_oop.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
postgres = [
  "psycopg[binary]>=3.1",
]
mysql = [
  "PyMySQL>=1.1",
]
bigquery = [
  "google-cloud-bigquery>=3.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_oop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pytest-cov>=7.1.0",
]
